Fixing issue with Files.writeString and character encoding